[gd_scene load_steps=4 format=3 uid="uid://chcw1jmq6xf7f"]

[ext_resource type="Script" path="res://dev/scripts/terminal_item_ui.gd" id="1_cbxtr"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_q1q04"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_deljy"]
size = Vector2(128, 128)

[node name="terminal_item_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cbxtr")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="left_side_container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -324.0
offset_right = 504.0
offset_bottom = 324.0
grow_vertical = 2

[node name="frame" type="RichTextLabel" parent="left_side_container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -295.0
offset_right = 454.0
offset_bottom = 295.0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 42
text = "| - - - - - - - - - - - - - - - - |
|                                     |
|                                     |
|                                     |
|                                     |
|                                     |
|                                     |
|                                     |
|                                     |
| - - - - - - - - - - - - - - - - |"

[node name="image" type="TextureRect" parent="left_side_container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -258.0
offset_right = 436.0
offset_bottom = 258.0
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_q1q04")

[node name="right_side_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -555.0
offset_top = -295.0
offset_right = -55.0
offset_bottom = 295.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="title_container" type="VBoxContainer" parent="right_side_container"]
layout_mode = 2

[node name="title" type="RichTextLabel" parent="right_side_container/title_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
text = "Item."
fit_content = true
scroll_active = false

[node name="underline" type="RichTextLabel" parent="right_side_container/title_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
text = "- - - - - - - - - - - - - - - - - -"
fit_content = true
scroll_active = false

[node name="description_container" type="VBoxContainer" parent="right_side_container"]
layout_mode = 2

[node name="description_header" type="RichTextLabel" parent="right_side_container/description_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "Description:"
fit_content = true
scroll_active = false

[node name="description_body" type="RichTextLabel" parent="right_side_container/description_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "abcdefghijklmnopqrstuvwxyzyxwvustrqponmlkjihgfedcba"
fit_content = true
scroll_active = false

[node name="underline" type="RichTextLabel" parent="right_side_container/description_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
text = "- - - - - - - - - - - - - - - - - -"
fit_content = true
scroll_active = false

[node name="coordinate_container" type="VBoxContainer" parent="right_side_container"]
layout_mode = 2

[node name="coordinate_header" type="RichTextLabel" parent="right_side_container/coordinate_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "Coordinate: "
fit_content = true
scroll_active = false

[node name="coordinate_body" type="RichTextLabel" parent="right_side_container/coordinate_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "(Row A, Col B, Shelf 00)"
fit_content = true
scroll_active = false

[node name="underline" type="RichTextLabel" parent="right_side_container/coordinate_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
text = "- - - - - - - - - - - - - - - - - -"
fit_content = true
scroll_active = false

[node name="truck_container" type="VBoxContainer" parent="right_side_container"]
layout_mode = 2

[node name="truck_image" type="TextureRect" parent="right_side_container/truck_container"]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_deljy")
stretch_mode = 3

[node name="Label" type="Label" parent="right_side_container/truck_container/truck_image"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="underline" type="RichTextLabel" parent="right_side_container/truck_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
text = "- - - - - - - - - - - - - - - - - -"
fit_content = true
scroll_active = false

[node name="exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_top = 10.0
offset_right = -17.0
offset_bottom = 41.0
grow_horizontal = 0
text = "X"
